# sagardo-engine

./: .gitignore  CMakeLists.txt  LICENSE  build_and_run
src/: CMakeLists.txt  ComponentUtils.cpp  HelloTriangle.cpp  HelloTriangle.h  VkHelloTriangle.cpp  VkHelloTriangle.h  main.cpp
src/Editor/: CMakeLists.txt  main.cpp
src/Engine/: Application.cpp  Application.h  CMakeLists.txt  CameraUpdateSystem.cpp  CameraUpdateSystem.h  Color.h  ColorUtils.h  ComponentUtils.h  Components.h  Components.hpp  GameObject.cpp  GameObject.h  GameObject.hpp  GlTextureLoader.cpp  GlTextureLoader.h  GlmUtils.cpp  GlmUtils.h  IRenderPipeline.h  IStartable.h  IStopable.h  IUpdatable.h  Mathf.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelUnloaderSystem.cpp  ModelUnloaderSystem.h  RenderPipeline.cpp  RenderPipeline.h  RendererInitializerSystem.cpp  RendererInitializerSystem.h  RendererSystem.cpp  RendererSystem.h  Scene.cpp  Scene.h  Scene.hpp  Shader.cpp  Shader.h  TimeProvider.cpp  (+1 more)
src/Engine.Tests/: CMakeLists.txt  main.cpp
src/Engine/Debug/: OpenGlDebug.cpp  OpenGlDebug.h
src/Engine/ECS/: CMakeLists.txt  Entity.cpp  Entity.h  ISystem.h  System.cpp  System.h  World.cpp  World.h
src/Engine/ECS/src/: Entity.cpp  World.cpp
src/Engine/IO/: File.cpp  File.h
src/Engine/Physics/: PhysicsEngineInitializerSystem.h
src/Engine/Renderer/: IRenderer.h
src/Engine/include/SagardoEngine/: Application.h  ColorUtils.h  ComponentUtils.h  Components.h  GameObject.h  GlTextureLoader.h  GlmUtils.h  IStartable.h  IUpdatable.h  Logger.h  Mesh.h  Model.h  Scene.h  Shader.h  TimeProvider.h  Window.h
src/Engine/include/SagardoEngine/ECS/: Entity.h  ISystem.h  World.h
src/Engine/src/: Application.cpp  CameraUpdateSystem.cpp  CameraUpdateSystem.h  ComponentUtils.cpp  GameObject.cpp  GlTextureLoader.cpp  GlmUtils.cpp  Mesh.cpp  Model.cpp  ModelUnloaderSystem.cpp  ModelUnloaderSystem.h  RendererInitializerSystem.cpp  RendererInitializerSystem.h  RendererSystem.cpp  RendererSystem.h  Scene.cpp  Shader.cpp  TimeProvider.cpp  Window.cpp
src/Engine/src/Debug/: OpenGlDebug.cpp
src/Engine/src/ECS/: World.cpp
src/Engine/src/IO/: File.cpp
src/Engine/src/Physics/: PhysicsEngineInitializerSystem.cpp  PhysicsEngineInitializerSystem.h
src/Player/: CMakeLists.txt  main.cpp
src/res/shaders/: color.frag
src/res/shaders/lit/: lit.frag  lit.vert
src/res/shaders/unlit/: unlit.frag
